--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xiaokai blog",
+  "name": "blog",
   "version": "1.0.0",
   "description": "Kaike's blog",
   "repository": "https://github.com/ChenKaiKe/blog.git",
