--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,21 +23,15 @@ jobs:
           # 选择要使用的 node 版本
           node-version: '14'
 
-      # 缓存 node_modules
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: |
-            **/node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+       # 删除旧依赖包及dist
+      - name: Delete node_modules
+        run: rm -rf ./node_modules
+      - name: Delete dist
+        run: rm -rf .vuepress/dist
 
-      # 如果缓存没有命中，安装依赖
+      # 安装依赖
       - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile
+        run: yarn
 
       # 运行构建脚本
       - name: Build VuePress site
