--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
 
       # 安装依赖
       - name: Install dependencies
-      - run: yarn install --frozen-lockfile
+        run: yarn --frozen-lockfile
 
       # 运行构建脚本
       - name: Build VuePress site
